--- a/nodetypes/daemon-service/playbooks/create.yaml
+++ b/nodetypes/daemon-service/playbooks/create.yaml
@@ -3,17 +3,17 @@
   gather_facts: false
   tasks:
 
-    # - name: Install pip3
-    #   become: yes
-    #   package:
-    #     name: python3-pip
-    #     state: latest
+    - name: Install pip3
+      become: yes
+      package:
+        name: python3-pip
+        state: latest
     
-    # - name: Installing required python packages
-    #   pip:
-    #     name: "{{ packages }}"
-    #     state: latest
-    #     executable: usr/bin/pip3
+    - name: Installing required python packages
+      pip:
+        name: "{{ packages }}"
+        state: latest
+        executable: usr/bin/pip3
 
     - name: Make the location for python script& service
       file:
